@@ -7,6 +7,7 @@ Release History
 
 - Improve error reporting for missing contexts.
 - Exit with code 3 if no metrics have been generated.
+- Improve default Summary.verbose() to list all threshold violations.
 
 
 1.0.0a2 (2012-10-26)
